<resources>
    <string name="app_name">BrainyLivingRoom</string>
    <string name="scan">Scan</string>
    <string name="connect">Connect</string>
    <string name="popup_title">Quit Brainy House?</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="bluetooth_not_supported">Bluetooth is not available on this device.</string>
    <string name="action_settings">Setting</string>
    <string name="symbol_celsius">℃</string>
    <string name="weather_setting_title">날씨 검색 설정</string>
    <string name="use_gps">GPS 사용</string>
    <string name="search_city">도시 검색</string>
    <string name="search">검색</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

</resources>
